add files gitignore, and add some rules to eslint

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
-    "build": "webpack --config ./webpack.config.js --env mode=prod"
+    "build": "webpack --config ./webpack.config.js --env mode=prod",
+    "check-types": "tsc --noEmit",
+    "eslint": "eslint --fix . --ext .ts --ext .js",
+    "lint": "npm run eslint && npm run check-types"
   },
   "repository": {
     "type": "git",
