--- a/package.json
+++ b/package.json
@@ -44,5 +44,11 @@
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "chart.js": "^4.2.0",
+    "chartjs": "^0.3.24",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "chartjs-plugin-outerlabels": "^2.0.0"
   }
 }
